force-app/main/default/objects/Service_Contact__c/Service_Contact__c.object-meta.xml
<CustomObject>
    <description>Service contacts are defined as the provision of a service by one or more PHN commissioned mental health service provider(s) for a client where the nature of the service would normally warrant a dated entry in the clinical record of the client.</description>
    <label>Service Contact</label>
    <nameField>
        <label>Service Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>