force-app/main/default/objects/Service_Contact__c/fields/Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>Funding_Source__c</fullName>
    <label>Funding Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0:	Flexible funding pool - Not Otherwise Stated</fullName>
            </value>
            <value>
                <fullName>11:	Flexible funding pool - Low intensity</fullName>
            </value>
            <value>
                <fullName>12:	Flexible funding pool - Youth Severe</fullName>
            </value>
            <value>
                <fullName>13:	Flexible funding pool - Child and Youth</fullName>
            </value>
            <value>
                <fullName>14:	Flexible funding pool - Psychological therapies for hard to reach</fullName>
            </value>
            <value>
                <fullName>15:	Flexible funding pool - Services for People with Severe Mental Illness</fullName>
            </value>
            <value>
                <fullName>16:	Flexible funding pool - Suicide Prevention - Indigenous</fullName>
            </value>
            <value>
                <fullName>17:	Flexible funding pool - Suicide Prevention - General</fullName>
            </value>
            <value>
                <fullName>18:	Indigenous Mental Health</fullName>
            </value>
            <value>
                <fullName>19:	Commonwealth Psychosocial Support</fullName>
            </value>
            <value>
                <fullName>20:	Psychological Treatment in Residential Aged Care Facilities</fullName>
            </value>
            <value>
                <fullName>21:	Emergency Response - Bushfire Recovery 2020</fullName>
            </value>
            <value>
                <fullName>22:	Emergency Response - Flood 2022</fullName>
            </value>
            <value>
                <fullName>23:	Head to Health program</fullName>
            </value>
            <value>
                <fullName>24:	Head to Health Kids Hubs</fullName>
            </value>
            <value>
                <fullName>25:	Norfolk Island</fullName>
            </value>
            <value>
                <fullName>26:	National Suicide Prevention Trial</fullName>
            </value>
            <value>
                <fullName>27:	Way Back Support Service</fullName>
            </value>
            <value>
                <fullName>97:	Other funding source – no Commonwealth Funding</fullName>
            </value>
            <value>
                <fullName>98:	Unknown/Not stated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>