force-app/main/default/objects/Service_Contact__c/fields/Participants__c.field-meta.xml
<CustomField>
    <fullName>Participants__c</fullName>
    <label>Participants</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1:	Individual client</fullName>
            </value>
            <value>
                <fullName>2:	Client group</fullName>
            </value>
            <value>
                <fullName>3:	Family / Client Support Network</fullName>
            </value>
            <value>
                <fullName>4:	Other health professional or service provider</fullName>
            </value>
            <value>
                <fullName>5:	Other</fullName>
            </value>
            <value>
                <fullName>9:	Not stated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>