force-app/main/default/objects/Service_Contact__c/fields/service_contact_copayment__c.field-meta.xml
<CustomField>
    <fullName>service_contact_copayment__c</fullName>
    <label>Copayment</label>
    <precision>8</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>