force-app/main/default/objects/Service_Contact__c/fields/Service_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Contact_Date__c</fullName>
    <description>The date of each mental health service contact between a health service provider and patient/client.</description>
    <label>Service Contact Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>