force-app/main/default/objects/Service_Contact__c/fields/service_contact_duration__c.field-meta.xml
<CustomField>
    <fullName>service_contact_duration__c</fullName>
    <label>Duration</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0:	No contact took place</fullName>
            </value>
            <value>
                <fullName>1:	1-15 mins</fullName>
            </value>
            <value>
                <fullName>2:	16-30 mins</fullName>
            </value>
            <value>
                <fullName>3:	31-45 mins</fullName>
            </value>
            <value>
                <fullName>4:	46-60 mins</fullName>
            </value>
            <value>
                <fullName>5:	61-75 mins</fullName>
            </value>
            <value>
                <fullName>6:	76-90 mins</fullName>
            </value>
            <value>
                <fullName>7:	91-105 mins</fullName>
            </value>
            <value>
                <fullName>8:	106-120 mins</fullName>
            </value>
            <value>
                <fullName>9:	over 120 mins</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>