force-app/main/default/objects/Service_Contact__c/fields/service_contact_final__c.field-meta.xml
<CustomField>
    <fullName>service_contact_final__c</fullName>
    <label>Final Service Contact</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1:	No further services are planned for the client in the current episode</fullName>
            </value>
            <value>
                <fullName>2:	Further services are planned for the client in the current episode</fullName>
            </value>
            <value>
                <fullName>3:	Not known at this stage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>