force-app/main/default/objects/Service_Contact__c/fields/Service_Contact_Key__c.field-meta.xml
<CustomField>
    <fullName>Service_Contact_Key__c</fullName>
    <description>This is a number or code assigned to each service contact. The Service Contact Key is unique and stable for each service contact at the level of the Provider Organisation.</description>
    <label>Service Contact Key</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>