force-app/main/default/objects/Service_Contact__c/fields/service_contact_modality__c.field-meta.xml
<CustomField>
    <fullName>service_contact_modality__c</fullName>
    <label>Modality</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0:	No contact took place</fullName>
            </value>
            <value>
                <fullName>1:	Face to Face</fullName>
            </value>
            <value>
                <fullName>2:	Telephone</fullName>
            </value>
            <value>
                <fullName>3:	Video</fullName>
            </value>
            <value>
                <fullName>4:	Internet-based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>