force-app/main/default/objects/Service_Contact__c/fields/service_contact_no_show__c.field-meta.xml
<CustomField>
    <fullName>service_contact_no_show__c</fullName>
    <label>No Show</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1:	Yes</fullName>
            </value>
            <value>
                <fullName>2:	No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>