force-app/main/default/objects/Service_Contact__c/fields/service_contact_postcode__c.field-meta.xml
<CustomField>
    <fullName>service_contact_postcode__c</fullName>
    <description>The Australian postcode where the service contact took place.</description>
    <label>Postcode</label>
    <length>11</length>
    <required>true</required>
    <type>Text</type>
</CustomField>