force-app/main/default/objects/Service_Contact__c/fields/service_contact_start_time__c.field-meta.xml
<CustomField>
    <fullName>service_contact_start_time__c</fullName>
    <description>The start time of each mental health service contact between a health service provider and patient/client.</description>
    <label>Start Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>