force-app/main/default/objects/Service_Contact__c/fields/Service_Contact_Tags__c.field-meta.xml
<CustomField>
    <fullName>Service_Contact_Tags__c</fullName>
    <description>List of tags for the service contact.</description>
    <label>Service Contact Tags</label>
    <length>100</length>
    <type>Text</type>
</CustomField>