force-app/main/default/objects/Service_Contact__c/fields/Service_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Contact_Type__c</fullName>
    <label>Service Contact Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0:	No contact took place</fullName>
            </value>
            <value>
                <fullName>1:	Assessment</fullName>
            </value>
            <value>
                <fullName>2:	Structured psychological intervention</fullName>
            </value>
            <value>
                <fullName>3:	Other psychological intervention</fullName>
            </value>
            <value>
                <fullName>4:	Clinical care coordination/liaison</fullName>
            </value>
            <value>
                <fullName>5:	Clinical nursing services</fullName>
            </value>
            <value>
                <fullName>6:	Child or youth specific assistance NEC</fullName>
            </value>
            <value>
                <fullName>7:	Suicide prevention specific assistance NEC</fullName>
            </value>
            <value>
                <fullName>8:	Cultural specific assistance NEC</fullName>
            </value>
            <value>
                <fullName>9:	Psychosocial support</fullName>
            </value>
            <value>
                <fullName>98:	ATAPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>