force-app/main/default/objects/Service_Contact__c/fields/service_contact_venue__c.field-meta.xml
<CustomField>
    <fullName>service_contact_venue__c</fullName>
    <label>Venue</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1:	Client’s Home</fullName>
            </value>
            <value>
                <fullName>2:	Service provider’s office</fullName>
            </value>
            <value>
                <fullName>3:	GP Practice</fullName>
            </value>
            <value>
                <fullName>4:	Other medical practice</fullName>
            </value>
            <value>
                <fullName>5:	Headspace Centre</fullName>
            </value>
            <value>
                <fullName>6:	Other primary care setting</fullName>
            </value>
            <value>
                <fullName>7:	Public or private hospital</fullName>
            </value>
            <value>
                <fullName>8:	Residential aged care facility</fullName>
            </value>
            <value>
                <fullName>9:	School or other educational centre</fullName>
            </value>
            <value>
                <fullName>10:	Client’s Workplace</fullName>
            </value>
            <value>
                <fullName>11:	Other</fullName>
            </value>
            <value>
                <fullName>12:	Aged care centre - non-residential</fullName>
            </value>
            <value>
                <fullName>98:	Not applicable (Service Contact Modality is not face to face)</fullName>
            </value>
            <value>
                <fullName>99:	Not stated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>